--- a/styles/explore/prices.css
+++ b/styles/explore/prices.css
@@ -55,8 +55,8 @@
 }
 
 .planos:hover{
-    transform: translateY(-10px) scale(1.05);  /* Eleva e aumenta um pouco */
-    box-shadow: 0px 10px 20px rgba(58, 0, 0, 0.4); /* Sombra mais suave */
+    transform: translateY(-10px) scale(1.05);  
+    box-shadow: 0px 10px 20px rgba(58, 0, 0, 0.4); 
 }
 
 .pld h4{
@@ -100,3 +100,4 @@
     width: 250px;
    
 }
+
