--- a/styles/principal.css
+++ b/styles/principal.css
@@ -13,7 +13,7 @@
 
 .div1{ 
     max-width: 500px;
-    margin: 60px 0px 190px 120px;
+    margin: 160px 0px 190px 120px;
 
 }
 
@@ -26,7 +26,9 @@ align-items: center;
 
 .maromba{
     max-width: 450px; 
-    height: auto;
+    height: 700px;
     width: 100%;
-    margin: 35px  0px 0px 200px;
+    position: fixed;
+    right: 131px;
+    top: 301px;
 }
