--- a/styles/header.css
+++ b/styles/header.css
@@ -13,7 +13,31 @@ header{
          gap: 10px;
          align-items: center;
     
-    }
+}
+.nav-bar a {
+    position: relative;
+    display: inline-block; 
+    padding: 8px 16px; 
+}
+
+.nav-bar a span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-bottom: 2px solid rgb(255, 0, 0);
+    border-radius: 15px;
+    transform: scale(0) translateY(50px);
+    opacity: 0;
+    transition: .5s;
+}
+
+.nav-bar a:hover span {
+    transform: scale(1) translateY(0);
+    opacity: 1;
+}
 
 .nav-bar{
    gap: 18px;
